[tool.uv]
index-url="https://mirrors.aliyun.com/pypi/simple/"
[project]
name = "aivideofactory"
version = "0.1.0"
description = "Automated video generation pipeline prototype"
authors = [
  { name = "zyx" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0,<0.28",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0"
]

[project.scripts]
aivf-storyboard = "aivideofactory.cli.storyboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

